syntax = "proto3";

package com.namely.protobuf.notable;

message Note {
    string note_id = 1;
    string note_title = 2;
    string note_content = 3;
    bool is_deleted = 4;
    Timestamp created_at = 5;
    Timestamp updated_at = 6;
}

message ListNotes {
    repeated Note notes = 1;
}

message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
}
