syntax = "proto3";

package com.namely.protobuf.notable;

message CreateNoteRequest {
    string note_id = 1;
    string note_title = 2;
    string note_content = 3;
}

message GetNoteRequest {
    string note_id = 1;
}

message ChangeNoteRequest {
    string note_id = 1;
    string note_title = 2;
    string note_content = 3;
}

message DeleteNoteRequest {
    string note_id = 1;
}
